--- a/Lab01.ipynb
+++ b/Lab01.ipynb
@@ -1,200 +1,330 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/LMU-CMSI-1010/lab-notebooks-original/blob/main/Lab01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/seanblatter/-LMU-CMSI-1010-lab-notebooks-original/blob/main/Lab01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kK54lqXcWh50"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/LMU-CMSI-1010/lab-notebooks-original/blob/main/Lab01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9aXfrLXg9seM"
+      },
+      "source": [
+        "# Lab 01 Taking Orders\n",
+        "***\n",
+        "In this lab you will practice using strings, variables, printing, and getting input from a user.\n",
+        "\n",
+        "## Greeting your customer\n",
+        "**In the following cell, print a statement to greet your customers and ask their names. Save their names in a variable, so you can use it later.**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "BvyaiHRdlsXj",
+        "outputId": "3c753f5d-e6b8-4bd8-8555-14f36d89327c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name?John\n",
+            "Your name is John\n"
+          ]
+        }
+      ],
+      "source": [
+        "# TODO: Greet your customer and ask for their name\n",
+        "customer_name = input(\"What is your name?\")\n",
+        "print('Your name is',customer_name,)\n",
+        "# TODO: Save their name in a variable\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LCUmYgcomFGg"
+      },
+      "source": [
+        "## Ask for their order by name\n",
+        "**In the following cell repeat the customer’s name and ask for their drink and meal order. Remember to save the drink as a variable and also save the meal as another variable.**\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "5DUZ_9hPmxCi",
+        "outputId": "8e37511e-de01-4d09-bcd7-df95ad37f476",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name?John\n",
+            "Hello John\n",
+            "What would you like to drink?Soda\n",
+            "One Soda coming right up\n",
+            "What can we get started for your meal?Fries\n",
+            "We will get your Fries started as well.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# TODO: Use the customer's name to ask for drink order\n",
+        "customer_name = input(\"What is your name?\")\n",
+        "\n",
+        "print('Hello' ,customer_name,)\n",
+        "drink_order = input('What would you like to drink?')\n",
+        "print('One' ,drink_order, 'coming right up' )\n",
+        "\n",
+        "\n",
+        "# TODO: Use the customer's name to ask for meal order\n",
+        "meal_order = input(\"What can we get started for your meal?\")\n",
+        "print(\"We will get your\" ,meal_order, \"started as well.\")\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4dODrt9WnO-v"
+      },
+      "source": [
+        "## Repeat their order \n",
+        "In the following cell, **thank your customer by name and repeat their order to them. Make sure you use the correct variables when you repeat it.**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "id": "ncutxJBKniMh",
+        "outputId": "64142513-c341-4e70-b4b3-b923b0f8b1af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name?Sean\n",
+            "Hello Sean\n",
+            "What would you like to drink?Coola\n",
+            "One Coola coming right up\n",
+            "What can we get started for your meal?Fries\n",
+            "We will get your Fries started as well.\n",
+            "Thank you Sean for your order of Coola and Fries.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Change this code to make sure that you are using the correct customer name, drink, and meal.\n",
+        "# TODO: Replace this comment with code to thank customer by name for their order\n",
+        "# e.g. Thank you, Lion.\n",
+        "\n",
+        "customer_name = input(\"What is your name?\")\n",
+        "\n",
+        "print('Hello' ,customer_name,)\n",
+        "drink_order = input('What would you like to drink?')\n",
+        "print('One' ,drink_order, 'coming right up' )\n",
+        "\n",
+        "meal_order = input(\"What can we get started for your meal?\")\n",
+        "print(\"We will get your\" ,meal_order, \"started as well.\")\n",
+        "\n",
+        "print('Thank you' ,customer_name, 'for your order of' ,drink_order, 'and' ,meal_order+'.')\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O8oF7J1OmCnQ"
+      },
+      "source": [
+        "## Challenge—figuring out your bill!\n",
+        "Since we don’t have a menu in this lab notebook, we don’t know what our meals should cost. We’ll trust the restaurant to tell you how much your total bill is and the percentage of your original bill that will comprise the tip. Tax is always 10% of the original bill. It randomly chooses your total bill and tip percentage for you. Can you use this information to find out what your original bill costs before the tip?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "mCuyN8JZqPhI",
+        "outputId": "2586772d-019c-47ce-c673-e97a0a915480",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Thank you. Your total bill is $12.22. Your tip percentage is 12%. Tax is 10%.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# The following code is given to you and does not need to be modified\n",
+        "import random\n",
+        "\n",
+        "# We select a random float between 10 and 30 for the total bill\n",
+        "total_bill = round(random.uniform(10, 30), 2)\n",
+        "\n",
+        "# We select a random integer tip percentage amount between 10 and 25 \n",
+        "tip = random.randint(10, 25)\n",
+        "print('Thank you. Your total bill is $' + str(total_bill) + '. Your tip percentage is ' + str(tip) +'%. Tax is 10%.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OIWaikgzrzdR"
+      },
+      "source": [
+        "**Edit the following cell to figure out what your original bill was.** We print it, but right now we always print the same value for the original bill"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "TM3VQOMVtiU4",
+        "outputId": "60db3a7d-9599-45dc-b4b1-0f825b6a53fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Thank you. Your total bill is $19.12. Your tip percentage is 25%. Tax is 10%.\n",
+            "Your original bill is $46.032000000000004.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# The following code is given to you and does not need to be modified\n",
+        "import random\n",
+        "\n",
+        "# We select a random float between 10 and 30 for the total bill\n",
+        "total_bill = round(random.uniform(10, 30), 2)\n",
+        "\n",
+        "# We select a random integer tip percentage amount between 10 and 25 \n",
+        "tip = random.randint(10, 25)\n",
+        "print('Thank you. Your total bill is $' + str(total_bill) + '. Your tip percentage is ' + str(tip) +'%. Tax is 10%.')\n",
+        "\n",
+        "tax = total_bill * 0.1\n",
+        "\n",
+        "# TODO: Change this code below to figure out your original bill. Right now, it is always 10.\n",
+        "original_bill = total_bill + tip + tax\n",
+        "\n",
+        "# No need to change below\n",
+        "print('Your original bill is $' + str(original_bill) + '.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dKL0LYd-E4JB"
+      },
+      "source": [
+        "### (optional) Reflections\n",
+        "Add a text cell below to answer the following questions:\n",
+        "1. What do you feel more confident about after completing this lab?\n",
+        "2. What do you feel you can use more help with after completing this lab?\n",
+        "3. Do you have any constructive suggestions on how we can help you or improve this lab?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Input functions\n",
+        "2. Solving calculation problems (Like finding the original_bill)\n",
+        "3. Nope!  "
+      ],
+      "metadata": {
+        "id": "sdrzxvBtOucO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gB1aHDpyFYey"
+      },
+      "source": [
+        "### Save your work to GitHub\n",
+        "Please save this notebook to your lab repository."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "47AOVfTTWh5_"
+      },
+      "outputs": [],
+      "source": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3.10.0 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.0"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+      }
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "9aXfrLXg9seM"
-   },
-   "source": [
-    "# Lab 01 Taking Orders\n",
-    "***\n",
-    "In this lab you will practice using strings, variables, printing, and getting input from a user.\n",
-    "\n",
-    "## Greeting your customer\n",
-    "**In the following cell, print a statement to greet your customers and ask their names. Save their names in a variable, so you can use it later.**\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "BvyaiHRdlsXj"
-   },
-   "outputs": [],
-   "source": [
-    "# TODO: Greet your customer and ask for their name\n",
-    "\n",
-    "# TODO: Save their name in a variable\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "LCUmYgcomFGg"
-   },
-   "source": [
-    "## Ask for their order by name\n",
-    "**In the following cell repeat the customer’s name and ask for their drink and meal order. Remember to save the drink as a variable and also save the meal as another variable.**\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "5DUZ_9hPmxCi"
-   },
-   "outputs": [],
-   "source": [
-    "# TODO: Use the customer's name to ask for drink order\n",
-    "\n",
-    "\n",
-    "# TODO: Use the customer's name to ask for meal order\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "4dODrt9WnO-v"
-   },
-   "source": [
-    "## Repeat their order \n",
-    "In the following cell, **thank your customer by name and repeat their order to them. Make sure you use the correct variables when you repeat it.**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "ncutxJBKniMh"
-   },
-   "outputs": [],
-   "source": [
-    "# Change this code to make sure that you are using the correct customer name, drink, and meal.\n",
-    "# TODO: Replace this comment with code to thank customer by name for their order\n",
-    "# e.g. Thank you, Lion.\n",
-    "print('Please let me repeat your order for you.')\n",
-    "# TODO: Replace this comment with code to repeat the drink and the meal\n",
-    "# e.g. I see that you have ordered a soda and pizza."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "O8oF7J1OmCnQ"
-   },
-   "source": [
-    "## Challenge—figuring out your bill!\n",
-    "Since we don’t have a menu in this lab notebook, we don’t know what our meals should cost. We’ll trust the restaurant to tell you how much your total bill is and the percentage of your original bill that will comprise the tip. Tax is always 10% of the original bill. It randomly chooses your total bill and tip percentage for you. Can you use this information to find out what your original bill costs before the tip?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "mCuyN8JZqPhI"
-   },
-   "outputs": [],
-   "source": [
-    "# The following code is given to you and does not need to be modified\n",
-    "import random\n",
-    "\n",
-    "# We select a random float between 10 and 30 for the total bill\n",
-    "total_bill = round(random.uniform(10, 30), 2)\n",
-    "\n",
-    "# We select a random integer tip percentage amount between 10 and 25 \n",
-    "tip = random.randint(10, 25)\n",
-    "print('Thank you. Your total bill is $' + str(total_bill) + '. Your tip percentage is ' + str(tip) +'%. Tax is 10%.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "OIWaikgzrzdR"
-   },
-   "source": [
-    "**Edit the following cell to figure out what your original bill was.** We print it, but right now we always print the same value for the original bill"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "TM3VQOMVtiU4"
-   },
-   "outputs": [],
-   "source": [
-    "# TODO: Change this code below to figure out your original bill. Right now, it is always 10.\n",
-    "original_bill = 10\n",
-    "\n",
-    "# No need to change below\n",
-    "print('Your original bill is $' + str(original_bill) + '.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "dKL0LYd-E4JB"
-   },
-   "source": [
-    "### (optional) Reflections\n",
-    "Add a text cell below to answer the following questions:\n",
-    "1. What do you feel more confident about after completing this lab?\n",
-    "2. What do you feel you can use more help with after completing this lab?\n",
-    "3. Do you have any constructive suggestions on how we can help you or improve this lab?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "gB1aHDpyFYey"
-   },
-   "source": [
-    "### Save your work to GitHub\n",
-    "Please save this notebook to your lab repository."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
