--- a/Lab00.ipynb
+++ b/Lab00.ipynb
@@ -72,6 +72,38 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(\"I guess I didn't do this yet\")"
+      ],
+      "metadata": {
+        "id": "pxIRrY6oPUZZ",
+        "outputId": "26eb4fee-376f-4338-e4f9-9fb6ebb9be3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I guess I didn't do this yet\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hello"
+      ],
+      "metadata": {
+        "id": "8OqyBX8IPTxv"
+      }
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ey2QzqWR9seO"
