--- a/Lab01.ipynb
+++ b/Lab01.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/seanblatter/-LMU-CMSI-1010-lab-notebooks-original/blob/main/Lab01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "kK54lqXcWh50"
       },
       "source": [
@@ -39,10 +29,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "BvyaiHRdlsXj",
-        "outputId": "3c753f5d-e6b8-4bd8-8555-14f36d89327c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3c753f5d-e6b8-4bd8-8555-14f36d89327c"
       },
       "outputs": [
         {
@@ -76,10 +66,10 @@
       "execution_count": 7,
       "metadata": {
         "id": "5DUZ_9hPmxCi",
-        "outputId": "8e37511e-de01-4d09-bcd7-df95ad37f476",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8e37511e-de01-4d09-bcd7-df95ad37f476"
       },
       "outputs": [
         {
@@ -125,10 +115,10 @@
       "execution_count": 16,
       "metadata": {
         "id": "ncutxJBKniMh",
-        "outputId": "64142513-c341-4e70-b4b3-b923b0f8b1af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "64142513-c341-4e70-b4b3-b923b0f8b1af"
       },
       "outputs": [
         {
@@ -178,10 +168,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "mCuyN8JZqPhI",
-        "outputId": "2586772d-019c-47ce-c673-e97a0a915480",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2586772d-019c-47ce-c673-e97a0a915480"
       },
       "outputs": [
         {
@@ -215,21 +205,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "id": "TM3VQOMVtiU4",
-        "outputId": "60db3a7d-9599-45dc-b4b1-0f825b6a53fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "75d2c4d1-6e68-4d89-b40a-cd3785a29343"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Thank you. Your total bill is $19.12. Your tip percentage is 25%. Tax is 10%.\n",
-            "Your original bill is $46.032000000000004.\n"
+            "Thank you. Your total bill is $23.92. Your tip percentage is 15%. Tax is 10%.\n",
+            "Your original bill is $41.312000000000005.\n"
           ]
         }
       ],
@@ -321,8 +311,7 @@
       }
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
