--- a/Lab01.ipynb
+++ b/Lab01.ipynb
@@ -205,21 +205,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {
         "id": "TM3VQOMVtiU4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75d2c4d1-6e68-4d89-b40a-cd3785a29343"
+        "outputId": "086193d1-8c3a-4ade-de8e-ce183ba98727"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Thank you. Your total bill is $23.92. Your tip percentage is 15%. Tax is 10%.\n",
-            "Your original bill is $41.312000000000005.\n"
+            "Thank you. Your total bill is $16.07. Your tip percentage is 18%. Tax is 10%.\n",
+            "Your original bill is $35.677.\n"
           ]
         }
       ],
